[package]
name = "hello-dino-in-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_rapier2d = { version = "0.23.0", features = [ "simd-stable", "debug-render-2d" ] }

[dev-dependencies]
bevy_prototype_lyon = "0.10.0"
indoc = "2.0.4"